---
source: pgpvis-core/src/render.rs
expression: node
---
children:
  - span:
      offset: 4
      length: 5
      inner: ~
    text: Curve OID
    children:
      - span: ~
        text: "Name: Curve25519Legacy"
        children: []
      - span:
          offset: 0
          length: 1
          inner: ~
        text: "Length: 1"
        children: []
      - span:
          offset: 2
          length: 3
          inner: ~
        text: "OID: [2 octets]"
        children: []
  - span:
      offset: 10
      length: 11
      inner: ~
    text: Q (MPI)
    children:
      - span:
          offset: 6
          length: 7
          inner: ~
        text: "Length: 1"
        children: []
      - span:
          offset: 8
          length: 9
          inner: ~
        text: "Integers: [2 octets]"
        children: []
  - span:
      offset: 20
      length: 21
      inner: ~
    text: KDF Parameters
    children:
      - span:
          offset: 12
          length: 13
          inner: ~
        text: "Length: 3"
        children: []
      - span:
          offset: 14
          length: 15
          inner: ~
        text: "Reserved: 1"
        children: []
      - span:
          offset: 16
          length: 17
          inner: ~
        text: "Hash Algorithm: SHA3-512 (14)"
        children: []
      - span:
          offset: 18
          length: 19
          inner: ~
        text: "Symmetric Key Algorithm: AES with 256-bit key (9)"
        children: []
